# ReqPack

./: -  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.release  LICENSE  Makefile  README.md  bom.json  install.sh
.github/badges/: coverage.json
.github/scripts/: archive-build-tree.sh  configure-build-test.sh  configure-build.sh  create-system-test-config.sh  package-release.sh  run-ctest.sh  run-system-tests-linux.sh  run-system-tests-macos.sh  setup-sol2.sh
.github/workflows/: ci.yml  coverage.yml  release.yml  tests.yml
docs/superpowers/specs/: 2026-05-09-plugin-bundle-format-design.md  2026-05-10-rqp-pack-design.md  2026-05-10-rqp-system-metadata-version-design.md
plugins/: dnf.lua  sample_plugin.lua
plugins/dnf/: bootstrap.lua  dnf.lua
plugins/dnf/.reqpack-test/core/: list.lua  search.lua
plugins/java/: java.lua
plugins/java/.reqpack-test/core/: proxy.lua
plugins/maven/: bootstrap.lua  maven.lua
plugins/maven/.reqpack-test/core/: list.lua  search.lua
plugins/sys/: sys.lua
plugins/sys/.reqpack-test/core/: list.lua  search.lua
scripts/: package_release_bundle.sh  run-all-local-system-tests-parallel.sh  run-all-local-system-tests.sh  run-local-system-tests.sh
src/main/cpp/: main.cpp  main_arg_parsing.cpp  main_arg_parsing.h  main_diagnostics.cpp  main_diagnostics.h  main_dispatch.cpp  main_dispatch.h  main_self_update.cpp  main_self_update.h  main_self_update_internal.h  main_self_update_release.cpp  main_self_update_support.cpp  main_stdin.cpp  main_stdin.h
src/main/cpp/cli/: cli.cpp  cli_help_text.cpp  cli_help_text.h  cli_parse_core.cpp  cli_parse_core.h  cli_parse_shared.cpp  cli_parse_shared.h  cli_system_discovery.cpp  cli_system_discovery.h
src/main/cpp/core/: archive_resolver.cpp  audit_exporter.cpp  configuration.cpp  downloader.cpp  downloader_core.cpp  executor.cpp  history_manager.cpp  host_info.cpp  manifest_loader.cpp  orchestrator.cpp  osv_core.cpp  planner.cpp  planner_core.cpp  plugin_test_runner.cpp  registry.cpp  registry_database.cpp  registry_database_core.cpp  registry_json_parser.cpp  remote_client.cpp  remote_profiles.cpp  request_resolution.cpp  rq_package.cpp  rq_repository.cpp  rqp_state_store.cpp  sbom_exporter.cpp  security_gateway_service.cpp  serve_remote.cpp  snapshot_exporter.cpp  transaction_database.cpp  transaction_database_core.cpp  validator.cpp  validator_core.cpp  version_compare.cpp  vulnerability_database.cpp  vulnerability_matcher.cpp  vulnerability_sync_service.cpp
src/main/cpp/output/: ansi_color.cpp  color_display.cpp  command_output.cpp  command_output_internal.h  command_output_projection.cpp  command_output_render.cpp  display_factory.cpp  logger.cpp  logger_core.cpp  logger_emit.cpp  logger_processing.cpp  logger_settings.cpp  plain_display.cpp  plain_display_internal.h  plain_display_session.cpp  plain_display_table.cpp
src/main/cpp/plugins/: exec_rules.cpp  exec_rules_core.cpp  lua_bridge.cpp  lua_bridge_bindings.cpp  lua_bridge_execution_policy.cpp  lua_bridge_host_runtime.cpp  lua_bridge_host_runtime_events.cpp  lua_bridge_host_runtime_execution.cpp  lua_bridge_plugin_api.cpp  lua_bridge_runtime.cpp  lua_bridge_value_mapper.cpp  rq_plugin.cpp  rqp_plugin.cpp  rqp_plugin_hooks.cpp  rqp_plugin_install.cpp  rqp_plugin_internal.h  rqp_plugin_pack.cpp  rqp_plugin_query.cpp  rqp_plugin_repository.cpp  rqp_plugin_state.cpp
src/main/include/cli/: cli.h
src/main/include/core/: archive_resolver.h  audit_exporter.h  configuration.h  downloader.h  downloader_core.h  executor.h  history_manager.h  orchestrator.h  osv_core.h  planner.h  planner_core.h  plugin_test_runner.h  registry.h  registry_database.h  registry_database_core.h  registry_json_parser.h  remote_client.h  remote_profiles.h  request_resolution.h  rq_package.h  rqp_state_store.h  sbom_exporter.h  security_gateway_service.h  serve_remote.h  snapshot_exporter.h  transaction_database.h  transaction_database_core.h  types.h  validator.h  validator_core.h  version_compare.h  vulnerability_database.h  vulnerability_matcher.h  vulnerability_sync_service.h
src/main/include/output/: ansi_color.h  color_display.h  command_output.h  diagnostic.h  display_factory.h  idisplay.h  logger.h  logger_core.h  plain_display.h  progress_metrics.h  progress_metrics_lua.h
src/main/include/plugins/: exec_rules.h  exec_rules_core.h  iplugin.h  lua_bridge.h  lua_bridge_bindings.h  lua_bridge_execution_policy.h  lua_bridge_host_runtime.h  lua_bridge_runtime.h  lua_bridge_value_mapper.h  rq_plugin.h  rqp_plugin.h
tests/: coverage_summary.py  profile_summary.py
tests/cpp/: test_helpers.h
tests/fixtures/plugin-bundles/dnf/: metadata.json  run.lua
tests/fixtures/plugin-bundles/java/: metadata.json  run.lua
tests/fixtures/plugin-bundles/maven/: metadata.json  reqpack.lua  run.lua
tests/fixtures/plugin-bundles/sys/: metadata.json  run.lua
tests/integration/core/execution/: executor_service_tests.cpp  orchestrator_service_tests.cpp
tests/integration/core/executor/: service_tests.cpp
tests/integration/core/orchestrator/: service_tests.cpp
tests/integration/core/planner/: service_tests.cpp
tests/integration/core/planning/: planner_service_tests.cpp
tests/integration/core/plugins/: plugin_test_runner_service_tests.cpp
tests/integration/core/registry/: registry_service_tests.cpp  service_tests.cpp
tests/integration/plugins/exec_rules/: smoke_tests.cpp
tests/integration/plugins/lua_bridge/: service_tests.cpp
tests/plugins/smoke/: metadata.json  run.lua  smoke.lua
tests/system/fixtures/demo-plugin/: demo-plugin.lua  metadata.json  run.lua
tests/system/local/: Containerfile  run-scenario.sh
tests/system/local/lib/: system_test_lib.sh
tests/unit/core/audit/: export_tests.cpp
tests/unit/core/common/: network_environment_tests.cpp  version_compare_tests.cpp
tests/unit/core/config/: configuration_cli_tests.cpp  configuration_parse_tests.cpp
tests/unit/core/osv/: core_tests.cpp
~/.reqpack/history/: data.mdb  history.jsonl  installed.json  lock.mdb
~/.reqpack/osv/: lock.mdb
~/.reqpack/transactions/: data.mdb  lock.mdb
(+351 files in other folders)
